# symphony-bdk-python

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .safety-policy.yml  .semgrepignore  .whitesource  CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTICE  README.md  hello.py  helloRSA.py  main_RSA.py  main_certificate.py  pyproject.toml  renovate.json  requirements.txt  setup.py  whitesource.config
.circleci/: config.yaml  config.yml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: Bug_report.md  meeting-minutes.md
.github/workflows/: build.yml  cve-scanning-python.yml  e2e-build.yml  license-scanning-python.yml  linting.yaml  push.yml  pylint.yaml  release.yml  security.yml  semgrep.yml  snyk.yml
api_client_generation/: generate.sh
docs/: CNAME  authentication.md  configuration.md  connection_service.md  datafeed.md  generated_api.md  genindex.html  getting_started.md  index.html  message_service.md  objects.inv  py-modindex.html  search.html  searchindex.js  stream_service.md
docs/_autosummary/: symphony.bdk.core.activity.api.AbstractActivity.html  symphony.bdk.core.activity.api.ActivityContext.html  symphony.bdk.core.activity.api.html  symphony.bdk.core.activity.command.CommandActivity.html  symphony.bdk.core.activity.command.CommandContext.html  symphony.bdk.core.activity.command.SlashCommandActivity.html  symphony.bdk.core.activity.command.html  symphony.bdk.core.activity.exception.FatalActivityExecutionException.html  symphony.bdk.core.activity.exception.html  symphony.bdk.core.activity.form.FormReplyActivity.html  symphony.bdk.core.activity.form.FormReplyContext.html  symphony.bdk.core.activity.form.html  symphony.bdk.core.activity.help_command.HelpCommand.html  symphony.bdk.core.activity.help_command.html  symphony.bdk.core.activity.html  symphony.bdk.core.activity.registry.ActivityRegistry.html  symphony.bdk.core.activity.registry.html  symphony.bdk.core.activity.user_joined_room.UserJoinedRoomActivity.html  symphony.bdk.core.activity.user_joined_room.UserJoinedRoomContext.html  symphony.bdk.core.activity.user_joined_room.html  symphony.bdk.core.auth.auth_session.AppAuthSession.html  symphony.bdk.core.auth.auth_session.AuthSession.html  symphony.bdk.core.auth.auth_session.OboAuthSession.html  symphony.bdk.core.auth.auth_session.html  symphony.bdk.core.auth.authenticator_factory.AuthenticatorFactory.html  symphony.bdk.core.auth.authenticator_factory.html  symphony.bdk.core.auth.bot_authenticator.BotAuthenticator.html  symphony.bdk.core.auth.bot_authenticator.BotAuthenticatorCert.html  symphony.bdk.core.auth.bot_authenticator.BotAuthenticatorRsa.html  symphony.bdk.core.auth.bot_authenticator.html  symphony.bdk.core.auth.exception.AuthInitializationError.html  symphony.bdk.core.auth.exception.AuthUnauthorizedError.html  symphony.bdk.core.auth.exception.html  symphony.bdk.core.auth.ext_app_authenticator.ExtensionAppAuthenticator.html  symphony.bdk.core.auth.ext_app_authenticator.ExtensionAppAuthenticatorCert.html  symphony.bdk.core.auth.ext_app_authenticator.ExtensionAppAuthenticatorRsa.html  symphony.bdk.core.auth.ext_app_authenticator.html  symphony.bdk.core.auth.html  symphony.bdk.core.auth.jwt_helper.create_signed_jwt.html  symphony.bdk.core.auth.jwt_helper.create_signed_jwt_with_claims.html  (+175 more)
docs/_sources/: index.md.txt
docs/markdown/: activity-api.html  application_service.html  authentication.html  configuration.html  connection_service.html  datafeed.html  extension.html  faq.html  getting_started.html  health_service.html  message_service.html  message_service.md  migration.html  presence_service.html  session_service.html  signal_service.html  stream_service.html  user_service.html
docsrc/: conf.py  index.md  index.rst
docsrc/markdown/: activity-api.md  application_service.md  authentication.md  configuration.md  connection_service.md  datafeed.md  extension.md  faq.md  generated_api.md  getting_started.md  health_service.md  index.md  message_service.md  migration.md  presence_service.md  session_service.md  signal_service.md  stream_service.md  user_service.md
examples/: activity.py  auth.py  config.py  connection.py  datafeed.py  datafeed_stop_loop.py  ext_app_auth.py  logging.conf  main_RSA.py  main_async.py  main_certificate.py  messages.py  signals.py  stream_main.py  suppress_message.py  users.py
examples/ExpenseBot/: main_expense_rsa.py
examples/activities/: activity.py  command_activity.py  form_activity.py  slash_command_activity.py  slash_command_with_arguments_activity.py  user_joined_room_activity.py
examples/authentication/: auth.py  ext_app_auth.py
examples/chatbot/: message_processor.py
examples/datafeed/: datafeed.py  datafeed_example.py  datafeed_stop_loop.py  datahose.py
examples/extension/: groups_extension.py
examples/multiple_instances/: README.md  (+2 more)
jenkins/: Jenkinsfile-release  release.sh
legacy/: README.md  requirements.txt  setup.py
sym_api_client_python/: DataFeedEventService.py  __init__.py  datafeed_event_service.py  hello.py  loaders.py
templates/: api_client.mustache  generate_client_api.sh  model_utils.mustache  rest.mustache
tests/: conftest.py  test_datafeed.py  test_datafeed_event_service.py  test_health_check.py  test_message_parser.py  test_messagesClient.py  test_streamClient.py  test_symphony_api_client_python.py  test_userClient.py
(+654 files in other folders)
